# vlc-win10smtc

./: .clang-format  .gitignore  CMakeLists.txt  README.md  download-vlc.ps1
.github/workflows/: build.yml
cmake/: FindLIBVLC.cmake
src/: CMakeLists.txt  module.cpp
src/msvc-compat/: poll.h  types.h
